add news and change template

--- a/mysite/templates/base2.html
+++ b/mysite/templates/base2.html
@@ -40,7 +40,7 @@
 </head>
 <body class="loading">
 <div id="top-menu">
-    <a class="logo clearfix" href="/">
+    <a class="logo clearfix" href="/pages">
         <img src="https://dn-coding-net-production-static.qbox.me/static/5ee8025c9dc63a6ff53153705d0e7ce8.png">
     </a>
     <ul class="nav">
