--- a/mysite/templates/base3.html
+++ b/mysite/templates/base3.html
@@ -41,7 +41,7 @@
 <!--body class="loading" -->
 <body>
 <div id="top-menu">
-    <a class="logo clearfix" href="/">
+    <a class="logo clearfix" href="/pages">
         <img src="https://dn-coding-net-production-static.qbox.me/static/5ee8025c9dc63a6ff53153705d0e7ce8.png">
     </a>
     <ul class="nav">
