some fix for BDsClub

--- a/mysite/BDsClub/templates/summary.html
+++ b/mysite/BDsClub/templates/summary.html
@@ -129,7 +129,7 @@ table.gridtable1 td {
 </tr>
 {% for play in plays %}
 <tr>
-<td>{{play.time}}</td>
+<td>{{play.play_time}}</td>
 <td>{{play.players}}</td>
 <td>{{play.place}}</td>
 <td>{{play.duration}}</td>
