--- a/mysite/BDsClub/templates/play1.html
+++ b/mysite/BDsClub/templates/play1.html
@@ -89,6 +89,7 @@ box-shadow: 0 1px 2px rgba(0,0,0,.2);
 <tr><td> 球馆: </td><td><input type="text" name="place" value={{play.place}}> </td></tr>
 <tr><td> 预定时间: </td><td><input type="text" name="duration" value={{play.duration}}></td></tr>
 <tr><td> 场地费: </td><td><input type="text" name="fee" value={{play.fee}}> </td></tr>
+<tr><td> 状态: </td><td><input type="text" name="state" value={{play.state}}> </td></tr>
 <tr><td> 备注: </td><td><input type="text" name="comment" value={{play.fee_comment}}></td></tr>
 </table>
 <input type="submit" class="button" name="start" value="发起">
