增加别名机制，防止微信名变更引起的混乱,真名可以对应多个微信昵称

--- a/mysite/BDsClub/templates/summary.html
+++ b/mysite/BDsClub/templates/summary.html
@@ -86,6 +86,23 @@ table.gridtable1 td {
 </div>
 <hr/>
 
+</div>
+<div>
+<table class="gridtable1">
+<tr>
+<th>真名</th>
+<th>昵称</th>
+</tr>
+{% for al in als %}
+<tr>
+<td>{{al.real_name}}</td>
+<td>{{al.wx_name}}</td>
+</tr>
+{% endfor %}
+</table>
+</div>
+<hr/>
+
 <div class="lay1">
 <table class="gridtable"> 
 <tr>
