--- a/mysite/BDsClub/templates/play1.html
+++ b/mysite/BDsClub/templates/play1.html
@@ -53,6 +53,20 @@ box-shadow: 0 1px 2px rgba(0,0,0,.2);
 } 
 </style>
 <div>
+<form action="/BDsClub/alias/" method="get">
+<table class="gridtable">
+<tr>
+<td> 真实姓名:</td>
+<td> <input type="text" name="name"> </td>
+</tr>
+<tr>
+<td> 微信名: </td>
+<td><input type="text" name="wxname"> </td>
+</tr>
+</table>
+<input type="submit" class="button" value="认证">
+</form>
+
 <form action="/BDsClub/deposit/" method="get">
 <table class="gridtable">
 <tr>
