--- a/mysite/BDsClub/templates/play1.html
+++ b/mysite/BDsClub/templates/play1.html
@@ -99,7 +99,7 @@ box-shadow: 0 1px 2px rgba(0,0,0,.2);
 <table class="gridtable">
 <tr><td> 编号: </td><td><input type="text" name="no" value={{play.id}}></td></tr>
 <tr><td> 时间: </td><td><input type="text" name="play_time" value={{play.play_time}}></td></tr>
-<tr><td> 参与人:</td><td><input type="textarea" name="players" value={{players}}></td></tr>
+<!--<tr><td> 参与人:</td><td><input type="textarea" name="players" value={{players}}></td></tr> -->
 <tr><td> 球馆: </td><td><input type="text" name="place" value={{play.place}}> </td></tr>
 <tr><td> 预定时间: </td><td><input type="text" name="duration" value={{play.duration}}></td></tr>
 <tr><td> 场地费: </td><td><input type="text" name="fee" value={{play.fee}}> </td></tr>
