--- a/mysite/BDsClub/templates/play1.html
+++ b/mysite/BDsClub/templates/play1.html
@@ -99,12 +99,12 @@ box-shadow: 0 1px 2px rgba(0,0,0,.2);
 <table class="gridtable">
 <tr><td> 编号: </td><td><input type="text" name="no" value={{play.id}}></td></tr>
 <tr><td> 时间: </td><td><input type="text" name="play_time" value={{play.play_time}}></td></tr>
-<!--<tr><td> 参与人:</td><td><input type="textarea" name="players" value={{players}}></td></tr> -->
+<tr><td> 参与人:</td><td><input type="textarea" name="players" value={{players}}></td></tr>
 <tr><td> 球馆: </td><td><input type="text" name="place" value={{play.place}}> </td></tr>
 <tr><td> 预定时间: </td><td><input type="text" name="duration" value={{play.duration}}></td></tr>
 <tr><td> 场地费: </td><td><input type="text" name="fee" value={{play.fee}}> </td></tr>
 <tr><td> 状态: </td><td><input type="text" name="state" value={{play.state}}> </td></tr>
-<tr><td> 备注: </td><td><input type="text" name="comment" value={{play.fee_comment}}></td></tr>
+<tr><td> 人时(请根据参与人顺序用|分隔): </td><td><input type="text" name="comment" value={{play.fee_comment}}></td></tr>
 </table>
 <input type="submit" class="button" name="start" value="发起">
 <input type="submit" class="button" name="running" value="进行中">
